--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Nguyen Van Tu Resume</title>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
+    <link rel="shortcut icon" href="./apple-touch-icon.png" type="image/x-icon">
 </head>
 
 <body class="relative bg-gray-50">
