--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
             <!-- avatar -->
             <div class="w-full rounded-full absolute -bottom-1/4">
                 <div class="w-64 mx-auto">
-                    <img src="./public/img/avatar_square.jpg" alt="avatar" class="w-full rounded-full p-1 border bg-white">
+                    <img src="./public/img/avatar_square.jpg" alt="avatar"
+                        class="w-full rounded-full p-1 border bg-white">
                 </div>
             </div>
         </header>
-    
+
         <section id="content" class="pt-20">
             <div class="container mx-auto">
                 <h1
                     class="text-4xl lg:text-5xl xl:text-5xl font-thin text-gray-900 tracking-wide text-center uppercase mb-2">
                     Nguyen Van Tu</h1>
-                <p id="role" class="text-2xl font-thin tracking-wider text-gray-800 uppercase text-center">intern | fresher
+                <p id="role" class="text-2xl font-thin tracking-wider text-gray-800 uppercase text-center">intern |
+                    fresher
                 </p>
-    
-                <div class="grid grid-rows-2 lg:grid lg:grid-cols-2 xl:grid xl:grid-cols-2 gap-4 my-8">
+
+                <div class="lg:grid xl:grid lg:grid-cols-2 xl:grid-cols-2 my-8">
                     <div class="w-full px-2">
                         <!-- wrapper -->
                         <div class="w-full">
@@ -43,7 +45,9 @@
                                 <h2 class=" text-xl tracking-wider uppercase">
                                     Personal summary
                                 </h2>
-                                <p class="text-sm lg:text-lg xl:text-lg font-thin">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos quo dolorem, et officiis esse iusto dicta accusamus numquam perferendis suscipit minus consequatur consectetur aut repellat eligendi a, libero doloribus omnis!</p>
+                                <p class="text-sm lg:text-lg xl:text-lg font-thin">My name is Tu, Nguyen Van Tu - a
+                                    minimalist guys. Who motivated to constantly develop my skills and grow
+                                    professionally. I love traveling and falling in the world of books</p>
                             </div>
                             <div class="p-4 bg-blue-100">
                                 <!-- title -->
@@ -54,14 +58,163 @@
                                     <li>
                                         <b>Programming Languages: </b> PHP, Javascript
                                     </li>
+                                    <li>
+                                        <b>Framework: </b> NodeJs, ReactJs, Laravel
+                                    </li>
+                                    <li>
+                                        <b>Tools: </b> Git, Github, Visual Studio
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="p-4 bg-blue-100">
+                                <!-- title -->
+                                <h2 class=" text-xl tracking-wider uppercase">
+                                    Contact Details
+                                </h2>
+                                <ul class="text-sm lg:text-lg xl:text-lg font-thin">
+                                    <li>
+                                        <b>Address: </b> 99 Nguyen Hau, Tan Phu .dist, HCM city
+                                    </li>
+                                    <li>
+                                        <b>Gmail: </b> <a href="mailto:nguyenvantu191298@gmail.com"
+                                            class="font-regular text-blue-700">nguyenvantu191298@gmail.com</a>
+                                    </li>
+                                    <li>
+                                        <b>Outlook: </b> <a href="mailto:tunv1998@outlook.com"
+                                            class="font-regular text-blue-700">tunv1998@outlook.com</a>
+                                    </li>
+                                    <li>
+                                        <b>Github: </b> <a href="https://github.com/vantu98"
+                                            class="font-regular text-blue-700"
+                                            target="_blank">https://github.com/vantu98</a>
+                                    </li>
+                                    <li>
+                                        <b>Phone: </b> <a href="call:0971794425" class="font-regular text-blue-700">0971
+                                            794 425</a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="w-full bg-red-200 p-2 rounded-lg"></div>
+                    <div class="w-full rounded-lg px-2 mt-4 lg:mt-0 xl:mt-0">
+                        <div class="w-full">
+                            <div class="">
+                                <!-- component -->
+                                <div class="">
+                                    <!-- header -->
+                                    <div class="flex items-center bg-blue-200">
+                                        <!-- icon -->
+                                        <ion-icon class="h-8 w-8 p-2 bg-blue-900 text-white" name="bulb"></ion-icon>
+                                        <h2 class=" text-xl tracking-wider uppercase ml-4">
+                                            academic history
+                                        </h2>
+                                    </div>
+                                    <div class="ml-14 my-4">
+                                        <h3 class="text-lg font-semibold text-gray-800">
+                                            FPT Polytechnic
+                                        </h3>
+                                        <p class="text-base text-gray-700">Web Design | Aug 2019 - Sep 2021</p>
+                                        <ul class="font-thin list-disc mt-2">
+                                            <p class="font-semibold">Certificate in Web Design</p>
+                                            <li>
+                                                Learned in-depth about Programming
+                                            </li>
+                                            <li>
+                                                Learned about the system, network and host provider
+                                            </li>
+                                            <li>
+                                                Self-learning about Framework such as: Laravel, ReactJs, VueJs
+                                            </li>
+                                            <li>
+                                                Teamwork and Manage Project skills
+                                            </li>
+                                            <li>
+                                                <b>Achievement: </b> Good Student of 5/5 semester
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <!-- component -->
+                                <div class="my-4">
+                                    <!-- header -->
+                                    <div class="flex items-center bg-blue-200">
+                                        <!-- icon -->
+                                        <ion-icon class="h-8 w-8 p-2 bg-blue-900 text-white" name="code"></ion-icon>
+                                        <h2 class=" text-xl tracking-wider uppercase ml-4">
+                                            pet projects
+                                        </h2>
+                                    </div>
+                                    <div class="ml-14 my-4">
+                                        <h3 class="text-lg font-semibold text-gray-800">
+                                            The Booking
+                                        </h3>
+                                        <p class="text-base text-gray-700">Project | Mar 2020 - Sep 2021</p>
+                                        <ul class="font-thin list-disc mt-2">
+                                            <p class="font-semibold">Online room booking</p>
+                                            <li>
+                                                <b>Github:</b> <a href="https://github.com/tunv1998/the_booking__client"
+                                                    target="_blank"
+                                                    class="font-regular text-blue-700">https://github.com/tunv1998/the_booking__client</a>
+                                            </li>
+                                            <li>
+                                                <b>Description: </b>
+                                                a website for users, who can book a
+                                                room for best price and for hotel's host, who can
+                                                create room for rent
+                                            </li>
+                                            <li>
+                                                <b>
+                                                    Tech Stacks:
+                                                </b>
+                                                PHP, HTML5, CSS3, Bootstrap,
+                                                Javascript, Git
+                                            </li>
+                                            <li>
+                                                <b>Role: </b>
+                                                Leader, Front-End developer
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <!-- component -->
+                                <div class="my-4">
+                                    <!-- header -->
+                                    <div class="flex items-center bg-blue-200">
+                                        <!-- icon -->
+                                        <ion-icon class="h-8 w-8 p-2 bg-blue-900 text-white" name="briefcase">
+                                        </ion-icon>
+                                        <h2 class=" text-xl tracking-wider uppercase ml-4">
+                                            work history
+                                        </h2>
+                                    </div>
+                                    <div class="ml-14 my-4">
+                                        <h3 class="text-lg font-semibold text-gray-800">
+                                            IT Helpdesk
+                                        </h3>
+                                        <p class="text-base text-gray-700">TRANMEDIA | Aug 2019 - Aug 2020</p>
+                                        <ul class="font-thin list-disc mt-2">
+                                            <li>
+                                                Maintenance and organization of e-commerce websites (for POD products).
+                                            </li>
+                                            <li>Make a landing page with ladipage.vn</li>
+                                            <li>
+                                                Run Facebook ads
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
+
+        <footer class="w-full bg-gray-900 p-2">
+            <div class="container mx-auto">
+                <p class="text-gray-50">Cover by tunv</p>
+            </div>
+        </footer>
     </div>
 </body>
 
