add download button

--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
                                     </li>
                                 </ul>
                             </div>
+
+                            <div class="w-full">
+                                <a href="./public/document/Nguyen Van Tu | Resume.pdf" class="block w-auto text-white bg-green-500 hover:bg-green-600 font-semibold py-2 px-4" download>
+                                    <span>Download CV</span>
+                                    <ion-icon name="download"></ion-icon>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="w-full rounded-lg px-2 mt-4 lg:mt-0 xl:mt-0">
