--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
     <link rel="shortcut icon" href="./apple-touch-icon.png" type="image/x-icon">
+    <meta name="description" content="My name is Tu, Nguyen Van Tu - a minimalist guys. Who motivated to constantly develop my skills and grow professionally. I love traveling and falling in the world of books">
+    <meta name="keywords" content="Nguyen Van Tu, tunv, tunv1998, vantu98">
 </head>
 
 <body class="relative bg-gray-50">
