--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
     <link rel="shortcut icon" href="./apple-touch-icon.png" type="image/x-icon">
-    <meta name="description" content="My name is Tu, Nguyen Van Tu - a minimalist guys. Who motivated to constantly develop my skills and grow professionally. I love traveling and falling in the world of books">
+    <meta name="description"
+        content="My name is Tu, Nguyen Van Tu - a minimalist guys. Who motivated to constantly develop my skills and grow professionally. I love traveling and falling in the world of books">
     <meta name="keywords" content="Nguyen Van Tu, tunv, tunv1998, vantu98">
+
+    <!-- Facebook Share -->
+    <meta property="og:url"
+        content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Nguyen Van Tu's Resume" />
+    <meta property="og:description" content="My name is Tu, Nguyen Van Tu - a minimalist guys. Who motivated to constantly develop my skills and grow professionally. I love traveling and falling in the world of books" />
+    <meta property="og:image"
+        content="./public/img/avatar_square.jpg" />
 </head>
 
 <body class="relative bg-gray-50">
@@ -98,7 +108,9 @@
                             </div>
 
                             <div class="w-full">
-                                <a href="./public/document/Nguyen Van Tu | Resume.pdf" class="block w-auto text-white bg-green-500 hover:bg-green-600 font-semibold py-2 px-4" download>
+                                <a href="./public/document/Nguyen Van Tu | Resume.pdf"
+                                    class="block w-auto text-white bg-green-500 hover:bg-green-600 font-semibold py-2 px-4"
+                                    download>
                                     <span>Download CV</span>
                                     <ion-icon name="download"></ion-icon>
                                 </a>
