add facebook share meta

--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
     <meta name="keywords" content="Nguyen Van Tu, tunv, tunv1998, vantu98">
 
     <!-- Facebook Share -->
-    <meta property="og:url"
-        content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Nguyen Van Tu's Resume" />
-    <meta property="og:description" content="My name is Tu, Nguyen Van Tu - a minimalist guys. Who motivated to constantly develop my skills and grow professionally. I love traveling and falling in the world of books" />
-    <meta property="og:image"
-        content="./public/img/avatar_square.jpg" />
+    <meta property="og:description"
+        content="My name is Tu, Nguyen Van Tu - a minimalist guys. Who motivated to constantly develop my skills and grow professionally. I love traveling and falling in the world of books" />
+    <meta property="og:image" content="./public/img/avatar_square.jpg" />
 </head>
 
 <body class="relative bg-gray-50">
